--- a/docs/modules/ROOT/pages/reference/extensions/core.adoc
+++ b/docs/modules/ROOT/pages/reference/extensions/core.adoc
@@ -138,9 +138,12 @@ When set to true, the `CamelRuntime` will be started automatically.
 
 |icon:lock[title=Fixed at build time] [[quarkus.camel.service.discovery.exclude-patterns]]`link:#quarkus.camel.service.discovery.exclude-patterns[quarkus.camel.service.discovery.exclude-patterns]`
 
-A comma-separated list of Ant-path style patterns to match Camel service definition files in the classpath. The services defined in the matching files will *not* be discoverable via the **`org.apache.camel.spi.FactoryFinder` mechanism.
+A comma-separated list of Ant-path style patterns to match Camel service definition files in the classpath. The
+services defined in the matching files will *not* be discoverable via the **`org.apache.camel.spi.FactoryFinder`
+mechanism.
 
-The excludes have higher precedence than includes. The excludes defined here can also be used to veto the discoverability of services included by Camel Quarkus extensions.
+The excludes have higher precedence than includes. The excludes defined here can also be used to veto the
+discoverability of services included by Camel Quarkus extensions.
 
 Example values: `META-INF/services/org/apache/camel/foo/++*++,META-INF/services/org/apache/camel/foo/++**++/bar`
 | List of `string`
@@ -148,9 +151,12 @@ Example values: `META-INF/services/org/apache/camel/foo/++*++,META-INF/services/
 
 |icon:lock[title=Fixed at build time] [[quarkus.camel.service.discovery.include-patterns]]`link:#quarkus.camel.service.discovery.include-patterns[quarkus.camel.service.discovery.include-patterns]`
 
-A comma-separated list of Ant-path style patterns to match Camel service definition files in the classpath. The services defined in the matching files will be discoverable via the `org.apache.camel.spi.FactoryFinder` mechanism unless the given file is excluded via `exclude-patterns`.
+A comma-separated list of Ant-path style patterns to match Camel service definition files in the classpath. The
+services defined in the matching files will be discoverable via the `org.apache.camel.spi.FactoryFinder` mechanism
+unless the given file is excluded via `exclude-patterns`.
 
-Note that Camel Quarkus extensions may include some services by default. The services selected here added to those services and the exclusions defined in `exclude-patterns` are applied to the union set.
+Note that Camel Quarkus extensions may include some services by default. The services selected here added to those
+services and the exclusions defined in `exclude-patterns` are applied to the union set.
 
 Example values: `META-INF/services/org/apache/camel/foo/++*++,META-INF/services/org/apache/camel/foo/++**++/bar`
 | List of `string`
@@ -158,9 +164,12 @@ Example values: `META-INF/services/org/apache/camel/foo/++*++,META-INF/services/
 
 |icon:lock[title=Fixed at build time] [[quarkus.camel.service.registry.exclude-patterns]]`link:#quarkus.camel.service.registry.exclude-patterns[quarkus.camel.service.registry.exclude-patterns]`
 
-A comma-separated list of Ant-path style patterns to match Camel service definition files in the classpath. The services defined in the matching files will *not* be added to Camel registry during application's static initialization.
+A comma-separated list of Ant-path style patterns to match Camel service definition files in the classpath. The
+services defined in the matching files will *not* be added to Camel registry during application's static
+initialization.
 
-The excludes have higher precedence than includes. The excludes defined here can also be used to veto the registration of services included by Camel Quarkus extensions.
+The excludes have higher precedence than includes. The excludes defined here can also be used to veto the
+registration of services included by Camel Quarkus extensions.
 
 Example values: `META-INF/services/org/apache/camel/foo/++*++,META-INF/services/org/apache/camel/foo/++**++/bar`**
 | List of `string`
@@ -168,9 +177,12 @@ Example values: `META-INF/services/org/apache/camel/foo/++*++,META-INF/services/
 
 |icon:lock[title=Fixed at build time] [[quarkus.camel.service.registry.include-patterns]]`link:#quarkus.camel.service.registry.include-patterns[quarkus.camel.service.registry.include-patterns]`
 
-A comma-separated list of Ant-path style patterns to match Camel service definition files in the classpath. The services defined in the matching files will be added to Camel registry during application's static initialization unless the given file is excluded via `exclude-patterns`.
+A comma-separated list of Ant-path style patterns to match Camel service definition files in the classpath. The
+services defined in the matching files will be added to Camel registry during application's static initialization
+unless the given file is excluded via `exclude-patterns`.
 
-Note that Camel Quarkus extensions may include some services by default. The services selected here added to those services and the exclusions defined in `exclude-patterns` are applied to the union set.
+Note that Camel Quarkus extensions may include some services by default. The services selected here added to those
+services and the exclusions defined in `exclude-patterns` are applied to the union set.
 
 Example values: `META-INF/services/org/apache/camel/foo/++*++,META-INF/services/org/apache/camel/foo/++**++/bar`
 | List of `string`
@@ -178,49 +190,67 @@ Example values: `META-INF/services/org/apache/camel/foo/++*++,META-INF/services/
 
 |icon:lock[title=Fixed at build time] [[quarkus.camel.runtime-catalog.components]]`link:#quarkus.camel.runtime-catalog.components[quarkus.camel.runtime-catalog.components]`
 
-If `true` the Runtime Camel Catalog embedded in the application will contain JSON schemas of Camel components available in the application; otherwise component JSON schemas will not be available in the Runtime Camel Catalog and any attempt to access those will result in a RuntimeException.
+If `true` the Runtime Camel Catalog embedded in the application will contain JSON schemas of Camel components
+available in the application; otherwise component JSON schemas will not be available in the Runtime Camel Catalog and
+any attempt to access those will result in a RuntimeException.
 
-Setting this to `false` helps to reduce the size of the native image. In JVM mode, there is no real benefit of setting this flag to `false` except for making the behavior consistent with native mode.
+Setting this to `false` helps to reduce the size of the native image. In JVM mode, there is no real benefit of
+setting this flag to `false` except for making the behavior consistent with native mode.
 | `boolean`
 | `true`
 
 |icon:lock[title=Fixed at build time] [[quarkus.camel.runtime-catalog.languages]]`link:#quarkus.camel.runtime-catalog.languages[quarkus.camel.runtime-catalog.languages]`
 
-If `true` the Runtime Camel Catalog embedded in the application will contain JSON schemas of Camel languages available in the application; otherwise language JSON schemas will not be available in the Runtime Camel Catalog and any attempt to access those will result in a RuntimeException.
+If `true` the Runtime Camel Catalog embedded in the application will contain JSON schemas of Camel languages
+available in the application; otherwise language JSON schemas will not be available in the Runtime Camel Catalog and
+any attempt to access those will result in a RuntimeException.
 
-Setting this to `false` helps to reduce the size of the native image. In JVM mode, there is no real benefit of setting this flag to `false` except for making the behavior consistent with native mode.
+Setting this to `false` helps to reduce the size of the native image. In JVM mode, there is no real benefit of
+setting this flag to `false` except for making the behavior consistent with native mode.
 | `boolean`
 | `true`
 
 |icon:lock[title=Fixed at build time] [[quarkus.camel.runtime-catalog.dataformats]]`link:#quarkus.camel.runtime-catalog.dataformats[quarkus.camel.runtime-catalog.dataformats]`
 
-If `true` the Runtime Camel Catalog embedded in the application will contain JSON schemas of Camel data formats available in the application; otherwise data format JSON schemas will not be available in the Runtime Camel Catalog and any attempt to access those will result in a RuntimeException.
+If `true` the Runtime Camel Catalog embedded in the application will contain JSON schemas of Camel data formats
+available in the application; otherwise data format JSON schemas will not be available in the Runtime Camel Catalog
+and any attempt to access those will result in a RuntimeException.
 
-Setting this to `false` helps to reduce the size of the native image. In JVM mode, there is no real benefit of setting this flag to `false` except for making the behavior consistent with native mode.
+Setting this to `false` helps to reduce the size of the native image. In JVM mode, there is no real benefit of
+setting this flag to `false` except for making the behavior consistent with native mode.
 | `boolean`
 | `true`
 
 |icon:lock[title=Fixed at build time] [[quarkus.camel.runtime-catalog.devconsoles]]`link:#quarkus.camel.runtime-catalog.devconsoles[quarkus.camel.runtime-catalog.devconsoles]`
 
-If `true` the Runtime Camel Catalog embedded in the application will contain JSON schemas of Camel dev consoles available in the application; otherwise dev console JSON schemas will not be available in the Runtime Camel Catalog and any attempt to access those will result in a RuntimeException.
+If `true` the Runtime Camel Catalog embedded in the application will contain JSON schemas of Camel dev consoles
+available in the application; otherwise dev console JSON schemas will not be available in the Runtime Camel Catalog
+and any attempt to access those will result in a RuntimeException.
 
-Setting this to `false` helps to reduce the size of the native image. In JVM mode, there is no real benefit of setting this flag to `false` except for making the behavior consistent with native mode.
+Setting this to `false` helps to reduce the size of the native image. In JVM mode, there is no real benefit of
+setting this flag to `false` except for making the behavior consistent with native mode.
 | `boolean`
 | `true`
 
 |icon:lock[title=Fixed at build time] [[quarkus.camel.runtime-catalog.models]]`link:#quarkus.camel.runtime-catalog.models[quarkus.camel.runtime-catalog.models]`
 
-If `true` the Runtime Camel Catalog embedded in the application will contain JSON schemas of Camel EIP models available in the application; otherwise EIP model JSON schemas will not be available in the Runtime Camel Catalog and any attempt to access those will result in a RuntimeException.
+If `true` the Runtime Camel Catalog embedded in the application will contain JSON schemas of Camel EIP models
+available in the application; otherwise EIP model JSON schemas will not be available in the Runtime Camel Catalog and
+any attempt to access those will result in a RuntimeException.
 
-Setting this to `false` helps to reduce the size of the native image. In JVM mode, there is no real benefit of setting this flag to `false` except for making the behavior consistent with native mode.
+Setting this to `false` helps to reduce the size of the native image. In JVM mode, there is no real benefit of
+setting this flag to `false` except for making the behavior consistent with native mode.
 | `boolean`
 | `true`
 
 |icon:lock[title=Fixed at build time] [[quarkus.camel.runtime-catalog.transformers]]`link:#quarkus.camel.runtime-catalog.transformers[quarkus.camel.runtime-catalog.transformers]`
 
-If `true` the Runtime Camel Catalog embedded in the application will contain JSON schemas of Camel transformers available in the application; otherwise transformer JSON schemas will not be available in the Runtime Camel Catalog and any attempt to access those will result in a RuntimeException.
+If `true` the Runtime Camel Catalog embedded in the application will contain JSON schemas of Camel transformers
+available in the application; otherwise transformer JSON schemas will not be available in the Runtime Camel Catalog
+and any attempt to access those will result in a RuntimeException.
 
-Setting this to `false` helps to reduce the size of the native image. In JVM mode, there is no real benefit of setting this flag to `false` except for making the behavior consistent with native mode.
+Setting this to `false` helps to reduce the size of the native image. In JVM mode, there is no real benefit of
+setting this flag to `false` except for making the behavior consistent with native mode.
 | `boolean`
 | `true`
 
@@ -232,19 +262,31 @@ Enable automatic discovery of routes during static initialization.
 
 |icon:lock[title=Fixed at build time] [[quarkus.camel.routes-discovery.exclude-patterns]]`link:#quarkus.camel.routes-discovery.exclude-patterns[quarkus.camel.routes-discovery.exclude-patterns]`
 
-Used for exclusive filtering scanning of RouteBuilder classes. The exclusive filtering takes precedence over inclusive filtering. The pattern is using Ant-path style pattern. Multiple patterns can be specified separated by comma. For example to exclude all classes starting with Bar use: ++**++/Bar++*++ To exclude all routes form a specific package use: com/mycompany/bar/++*++ To exclude all routes form a specific package and its sub-packages use double wildcards: com/mycompany/bar/++**++ And to exclude all routes from two specific packages use: com/mycompany/bar/++*++,com/mycompany/stuff/++*++
+Used for exclusive filtering scanning of RouteBuilder classes. The exclusive filtering takes precedence over
+inclusive filtering. The pattern is using Ant-path style pattern. Multiple patterns can be specified separated by
+comma. For example to exclude all classes starting with Bar use: ++**++/Bar++*++ To exclude all routes form a
+specific package use: com/mycompany/bar/++*++ To exclude all routes form a specific package and its sub-packages use
+double wildcards: com/mycompany/bar/++**++ And to exclude all routes from two specific packages use:
+com/mycompany/bar/++*++,com/mycompany/stuff/++*++
 | List of `string`
 | 
 
 |icon:lock[title=Fixed at build time] [[quarkus.camel.routes-discovery.include-patterns]]`link:#quarkus.camel.routes-discovery.include-patterns[quarkus.camel.routes-discovery.include-patterns]`
 
-Used for inclusive filtering scanning of RouteBuilder classes. The exclusive filtering takes precedence over inclusive filtering. The pattern is using Ant-path style pattern. Multiple patterns can be specified separated by comma. For example to include all classes starting with Foo use: ++**++/Foo++*++ To include all routes form a specific package use: com/mycompany/foo/++*++ To include all routes form a specific package and its sub-packages use double wildcards: com/mycompany/foo/++**++ And to include all routes from two specific packages use: com/mycompany/foo/++*++,com/mycompany/stuff/++*++
+Used for inclusive filtering scanning of RouteBuilder classes. The exclusive filtering takes precedence over
+inclusive filtering. The pattern is using Ant-path style pattern. Multiple patterns can be specified separated by
+comma. For example to include all classes starting with Foo use: ++**++/Foo++*++ To include all routes form a
+specific package use: com/mycompany/foo/++*++ To include all routes form a specific package and its sub-packages use
+double wildcards: com/mycompany/foo/++**++ And to include all routes from two specific packages use:
+com/mycompany/foo/++*++,com/mycompany/stuff/++*++
 | List of `string`
 | 
 
 |icon:lock[title=Fixed at build time] [[quarkus.camel.native.reflection.exclude-patterns]]`link:#quarkus.camel.native.reflection.exclude-patterns[quarkus.camel.native.reflection.exclude-patterns]`
 
-A comma separated list of Ant-path style patterns to match class names that should be *excluded* from registering for reflection. Use the class name format as returned by the `java.lang.Class.getName()` method: package segments delimited by period `.` and inner classes by dollar sign `$`.
+A comma separated list of Ant-path style patterns to match class names that should be *excluded* from registering for
+reflection. Use the class name format as returned by the `java.lang.Class.getName()` method: package segments
+delimited by period `.` and inner classes by dollar sign `$`.
 
 This option narrows down the set selected by `include-patterns`. By default, no classes are excluded.
 
@@ -254,24 +296,30 @@ This option cannot be used to unregister classes which have been registered inte
 
 |icon:lock[title=Fixed at build time] [[quarkus.camel.native.reflection.include-patterns]]`link:#quarkus.camel.native.reflection.include-patterns[quarkus.camel.native.reflection.include-patterns]`
 
-A comma separated list of Ant-path style patterns to match class names that should be registered for reflection. Use the class name format as returned by the `java.lang.Class.getName()` method: package segments delimited by period `.` and inner classes by dollar sign `$`.
+A comma separated list of Ant-path style patterns to match class names that should be registered for reflection. Use
+the class name format as returned by the `java.lang.Class.getName()` method: package segments delimited by period `.`
+and inner classes by dollar sign `$`.
 
 By default, no classes are included. The set selected by this option can be narrowed down by `exclude-patterns`.
 
-Note that Quarkus extensions typically register the required classes for reflection by themselves. This option is useful in situations when the built in functionality is not sufficient.
+Note that Quarkus extensions typically register the required classes for reflection by themselves. This option is
+useful in situations when the built in functionality is not sufficient.
 
-Note that this option enables the full reflective access for constructors, fields and methods. If you need a finer grained control, consider using `io.quarkus.runtime.annotations.RegisterForReflection` annotation in your Java code.
+Note that this option enables the full reflective access for constructors, fields and methods. If you need a finer
+grained control, consider using `io.quarkus.runtime.annotations.RegisterForReflection` annotation in your Java code.
 
 For this option to work properly, at least one of the following conditions must be satisfied:
 
- - There are no wildcards (`++*++` or `/`) in the patterns
- - The artifacts containing the selected classes contain a Jandex index (`META-INF/jandex.idx`)
- - The artifacts containing the selected classes are registered for indexing using the `quarkus.index-dependency.++*++` family of options in `application.properties` - e.g.
+- There are no wildcards (`++*++` or `/`) in the patterns
+- The artifacts containing the selected classes contain a Jandex index (`META-INF/jandex.idx`)
+- The artifacts containing the selected classes are registered for indexing using the
+`quarkus.index-dependency.++*++` family of options in `application.properties` - e.g.
 
-```
+[source,properties]
+----
 quarkus.index-dependency.my-dep.group-id = org.my-group
 quarkus.index-dependency.my-dep.artifact-id = my-artifact
-```
+----
 
 where `my-dep` is a label of your choice to tell Quarkus that `org.my-group` and with `my-artifact` belong together.
 | List of `string`
@@ -279,7 +327,11 @@ where `my-dep` is a label of your choice to tell Quarkus that `org.my-group` and
 
 |icon:lock[title=Fixed at build time] [[quarkus.camel.native.reflection.serialization-enabled]]`link:#quarkus.camel.native.reflection.serialization-enabled[quarkus.camel.native.reflection.serialization-enabled]`
 
-If `true`, basic classes are registered for serialization; otherwise basic classes won't be registered automatically for serialization in native mode. The list of classes automatically registered for serialization can be found in link:https://github.com/apache/camel-quarkus/blob/main/extensions-core/core/deployment/src/main/java/org/apache/camel/quarkus/core/deployment/CamelSerializationProcessor.java[CamelSerializationProcessor.BASE_SERIALIZATION_CLASSES]. Setting this to `false` helps to reduce the size of the native image. In JVM mode, there is no real benefit of setting this flag to `true` except for making the behavior consistent with native mode.
+If `true`, basic classes are registered for serialization; otherwise basic classes won't be registered automatically
+for serialization in native mode. The list of classes automatically registered for serialization can be found in
+link:https://github.com/apache/camel-quarkus/blob/main/extensions-core/core/deployment/src/main/java/org/apache/camel/quarkus/core/deployment/CamelSerializationProcessor.java[CamelSerializationProcessor.BASE_SERIALIZATION_CLASSES].
+Setting this to `false` helps to reduce the size of the native image. In JVM mode, there is no real benefit of
+setting this flag to `true` except for making the behavior consistent with native mode.
 | `boolean`
 | `false`
 
@@ -297,7 +349,8 @@ What to do if it is not possible to extract expressions from a route definition 
 
 |icon:lock[title=Fixed at build time] [[quarkus.camel.expression.extraction-enabled]]`link:#quarkus.camel.expression.extraction-enabled[quarkus.camel.expression.extraction-enabled]`
 
-Indicates whether the expression extraction from the route definitions at build time must be done. If disabled, the expressions are compiled at runtime.
+Indicates whether the expression extraction from the route definitions at build time must be done. If disabled, the
+expressions are compiled at runtime.
 | `boolean`
 | `true`
 
@@ -305,9 +358,12 @@ Indicates whether the expression extraction from the route definitions at build 
 
 Whether to enable the bridging of Camel events to CDI events.
 
-This allows CDI observers to be configured for Camel events. E.g. those belonging to the `org.apache.camel.quarkus.core.events`, `org.apache.camel.quarkus.main.events` & `org.apache.camel.impl.event` packages.
+This allows CDI observers to be configured for Camel events. E.g. those belonging to the
+`org.apache.camel.quarkus.core.events`, `org.apache.camel.quarkus.main.events` & `org.apache.camel.impl.event`
+packages.
 
-Note that this configuration item only has any effect when observers configured for Camel events are present in the application.
+Note that this configuration item only has any effect when observers configured for Camel events are present in the
+application.
 | `boolean`
 | `true`
 
@@ -325,7 +381,8 @@ Enables tracer in your Camel application.
 
 |icon:lock[title=Fixed at build time] [[quarkus.camel.trace.standby]]`link:#quarkus.camel.trace.standby[quarkus.camel.trace.standby]`
 
-To set the tracer in standby mode, where the tracer will be installed, but not automatically enabled. The tracer can then be enabled explicitly later from Java, JMX or tooling.
+To set the tracer in standby mode, where the tracer will be installed, but not automatically enabled. The tracer can
+then be enabled explicitly later from Java, JMX or tooling.
 | `boolean`
 | `false`
 
@@ -337,7 +394,8 @@ Defines how many of the last messages to keep in the tracer.
 
 |icon:lock[title=Fixed at build time] [[quarkus.camel.trace.remove-on-dump]]`link:#quarkus.camel.trace.remove-on-dump[quarkus.camel.trace.remove-on-dump]`
 
-Whether all traced messages should be removed when the tracer is dumping. By default, the messages are removed, which means that dumping will not contain previous dumped messages.
+Whether all traced messages should be removed when the tracer is dumping. By default, the messages are removed, which
+means that dumping will not contain previous dumped messages.
 | `boolean`
 | `true`
 
@@ -349,13 +407,15 @@ To limit the message body to a maximum size in the traced message. Use 0 or nega
 
 |icon:lock[title=Fixed at build time] [[quarkus.camel.trace.body-include-streams]]`link:#quarkus.camel.trace.body-include-streams[quarkus.camel.trace.body-include-streams]`
 
-Whether to include the message body of stream based messages. If enabled then beware the stream may not be re-readable later. See more about Stream Caching.
+Whether to include the message body of stream based messages. If enabled then beware the stream may not be
+re-readable later. See more about Stream Caching.
 | `boolean`
 | `false`
 
 |icon:lock[title=Fixed at build time] [[quarkus.camel.trace.body-include-files]]`link:#quarkus.camel.trace.body-include-files[quarkus.camel.trace.body-include-files]`
 
-Whether to include the message body of file based messages. The overhead is that the file content has to be read from the file.
+Whether to include the message body of file based messages. The overhead is that the file content has to be read from
+the file.
 | `boolean`
 | `true`
 
@@ -403,7 +463,8 @@ Filter for tracing messages.
 
 |icon:lock[title=Fixed at build time] [[quarkus.camel.type-converter.statistics-enabled]]`link:#quarkus.camel.type-converter.statistics-enabled[quarkus.camel.type-converter.statistics-enabled]`
 
-Whether type converter statistics are enabled. By default, type converter utilization statistics are disabled. Note that enabling statistics incurs a minor performance impact under very heavy load.
+Whether type converter statistics are enabled. By default, type converter utilization statistics are disabled. Note
+that enabling statistics incurs a minor performance impact under very heavy load.
 | `boolean`
 | `false`
 
@@ -415,7 +476,9 @@ A timeout (with millisecond precision) to wait for `CamelMain++#++stop()` to fin
 
 |icon:lock[title=Fixed at build time] [[quarkus.camel.main.arguments.on-unknown]]`link:#quarkus.camel.main.arguments.on-unknown[quarkus.camel.main.arguments.on-unknown]`
 
-The action to take when `CamelMain` encounters an unknown argument. fail - Prints the `CamelMain` usage statement and throws a `RuntimeException` ignore - Suppresses any warnings and the application startup proceeds as normal warn - Prints the `CamelMain` usage statement but allows the application startup to proceed as normal
+The action to take when `CamelMain` encounters an unknown argument. fail - Prints the `CamelMain` usage statement and
+throws a `RuntimeException` ignore - Suppresses any warnings and the application startup proceeds as normal warn -
+Prints the `CamelMain` usage statement but allows the application startup to proceed as normal
 | `fail`, `warn`, `ignore`
 | `warn`
 |===
