--- a/docs/modules/ROOT/pages/reference/extensions/debug.adoc
+++ b/docs/modules/ROOT/pages/reference/extensions/debug.adoc
@@ -85,7 +85,8 @@ Set whether to enable Camel debugging support.
 
 |icon:lock[title=Fixed at build time] [[quarkus.camel.debug.suspend]]`link:#quarkus.camel.debug.suspend[quarkus.camel.debug.suspend]`
 
-Indicates whether the _suspend mode_ is enabled or not. If `true` the message processing is immediately suspended until the method `attach()` is called.
+Indicates whether the _suspend mode_ is enabled or not. If `true` the message processing is immediately suspended
+until the method `attach()` is called.
 | `boolean`
 | `false`
 |===
