Add an example for using a specific transaction policy to JTA extension docs

--- a/extensions/jta/runtime/src/main/doc/usage.adoc
+++ b/extensions/jta/runtime/src/main/doc/usage.adoc
@@ -8,10 +8,21 @@ from("direct:transaction")
     .transacted()
     .to("sql:INSERT INTO A TABLE ...?dataSource=#ds1")
     .to("sql:INSERT INTO A TABLE ...?dataSource=#ds2")
-    .log("all data are in the ds1 and ds2")
+    .log("All data committed to DataSources ds1 and ds2")
 ----
 
-Support is provided for various transaction policies.
+You can use a specific transaction policy by referring to its name.
+
+[source,java]
+----
+from("direct:transaction")
+    .transacted("PROPAGATION_REQUIRED")
+    .to("sql:INSERT INTO A TABLE ...?dataSource=#ds1");
+    .to("sql:INSERT INTO A TABLE ...?dataSource=#ds2")
+    .log("All data committed to DataSources ds1 and ds2")
+----
+
+Support is provided for the following transaction policies.
 
 [cols="50,.^50]
 |===
