--- a/tooling/maven-plugin/src/main/resources/doc-templates/extension-doc-page.adoc
+++ b/tooling/maven-plugin/src/main/resources/doc-templates/extension-doc-page.adoc
@@ -123,46 +123,13 @@ In order to ensure alignment across all Quarkus and LangChain4j related dependen
 Note that the import order is paramount when using maven `dependencyManagement`.
 As such, one might need to import the `quarkus-langchain4j-bom` before other related Camel and Quarkus boms.
 [/#if]
-[#if configuration?? || quarkusAwsClient?? || configOptions?size != 0 ]
+[#if configuration?? || configOptions?size != 0 ]
 
 [id="extensions-[=artifactIdBase]-additional-camel-quarkus-configuration"]
 == Additional Camel Quarkus configuration
 [#if configuration??]
 
 [=configuration]
-[/#if]
-[#if quarkusAwsClient??]
-
-[id="extensions-[=artifactIdBase]-optional-integration-with-[=quarkusAwsClient.extensionNameIdHeading]"]
-=== Optional integration with [=quarkusAwsClient.extensionName]
-
-If desired, it is possible to use the [=quarkusAwsClient.extensionName] extension in conjunction with Camel Quarkus [=name].
-Note that this is fully optional and not mandatory at all.
-Please follow the [=quarkusAwsClient.configurationUrl][Quarkus documentation] but beware of the following caveats:
-
-1. The client type `apache` has to be selected by configuring the following property:
-+
-[source,properties]
-----
-[=quarkusAwsClient.configBase].sync-client.type=apache
-----
-
-2. The `[=quarkusAwsClient.clientClassSimpleName]` has to be made "unremovable" in the sense of https://quarkus.io/guides/cdi-reference#remove_unused_beans[Quarkus CDI reference] so that Camel Quarkus is able to look it up at runtime.
-You can reach that e.g. by adding a dummy bean injecting `[=quarkusAwsClient.clientClassSimpleName]`:
-+
-[source,java]
-----
-import jakarta.enterprise.context.ApplicationScoped;
-import io.quarkus.arc.Unremovable;
-import [=quarkusAwsClient.clientClassFqName];
-
-@ApplicationScoped
-@Unremovable
-class Unremovable[=quarkusAwsClient.clientClassSimpleName] {
-    @Inject
-    [=quarkusAwsClient.clientClassSimpleName] [=quarkusAwsClient.clientFieldName];
-}
-----
 [/#if]
 [#if configOptions?size != 0 ]
 
