fixed typos in testing.adoc

--- a/docs/modules/ROOT/pages/user-guide/testing.adoc
+++ b/docs/modules/ROOT/pages/user-guide/testing.adoc
@@ -292,7 +292,7 @@ class SimpleTest extends CamelQuarkusTestSupport {
 
         template.sendBody("direct:start", "World");
 
-        mockEndpoint.assertIsSatisified();
+        mockEndpoint.assertIsSatisfied();
     }
 
     @Override
@@ -374,7 +374,7 @@ class SimpleTest extends CamelQuarkusTestSupport {
 
         template.sendBody("direct:start", "World");
 
-        mockEndpoint.assertIsSatisified();
+        mockEndpoint.assertIsSatisfied();
     }
 }
 ----
