--- a/extensions/cxf-soap/runtime/src/main/doc/usage.adoc
+++ b/extensions/cxf-soap/runtime/src/main/doc/usage.adoc
@@ -17,7 +17,6 @@ With `camel-quarkus-cxf-soap` (no additional dependencies required), you can use
 ----
 import org.apache.camel.builder.RouteBuilder;
 import {javaxOrJakartaPackagePrefix}.enterprise.context.ApplicationScoped;
-import {javaxOrJakartaPackagePrefix}.enterprise.context.SessionScoped;
 import {javaxOrJakartaPackagePrefix}.enterprise.inject.Produces;
 import {javaxOrJakartaPackagePrefix}.inject.Named;
 
@@ -38,7 +37,7 @@ public class CxfSoapClientRoutes extends RouteBuilder {
     }
 
     @Produces
-    @SessionScoped
+    @ApplicationScoped
     @Named
     CxfEndpoint beanClient() {
         final CxfEndpoint result = new CxfEndpoint();
@@ -166,7 +165,6 @@ You can enable verbose logging of SOAP messages for both clients and servers wit
 import org.apache.camel.builder.RouteBuilder;
 import org.apache.cxf.ext.logging.LoggingFeature;
 import {javaxOrJakartaPackagePrefix}.enterprise.context.ApplicationScoped;
-import {javaxOrJakartaPackagePrefix}.enterprise.context.SessionScoped;
 import {javaxOrJakartaPackagePrefix}.enterprise.inject.Produces;
 import {javaxOrJakartaPackagePrefix}.inject.Named;
 
@@ -187,7 +185,7 @@ public class MyBeans {
     LoggingFeature prettyLoggingFeature;
 
     @Produces
-    @SessionScoped
+    @ApplicationScoped
     @Named
     CxfEndpoint cxfBeanClient() {
         final CxfEndpoint result = new CxfEndpoint();
