--- a/docs/modules/ROOT/pages/migration-guide/index.adoc
+++ b/docs/modules/ROOT/pages/migration-guide/index.adoc
@@ -4,6 +4,7 @@ We do frequent releases, a release almost every month, and even though we strive
 
 Listed here are guides on how to migrate between major versions and anything of significance to watch for when upgrading from minor versions.
 
+* xref:migration-guide/3.18.0.adoc[Camel Quarkus 3.17.x to Camel Quarkus 3.18.0 migration guide]
 * xref:migration-guide/3.17.0.adoc[Camel Quarkus 3.16.x to Camel Quarkus 3.17.0 migration guide]
 * xref:migration-guide/3.15.0.adoc[Camel Quarkus 3.14.x to Camel Quarkus 3.15.0 migration guide]
 * xref:migration-guide/3.2.0.adoc[Camel Quarkus 2.x to Camel Quarkus 3.2.0 migration guide]
