--- a/extensions/bindy/runtime/src/main/doc/limitations.adoc
+++ b/extensions/bindy/runtime/src/main/doc/limitations.adoc
@@ -1,11 +1,22 @@
 When using camel-quarkus-bindy in native mode, only the build machine's locale is supported.
 
-For instance, on build machines with french locale, the code below:
-```
+For instance, on build machines with French locale, the code below:
+
+[source,java]
+----
+
 BindyDataFormat dataFormat = new BindyDataFormat();
 dataFormat.setLocale("ar");
-```
-formats numbers the arabic way in JVM mode as expected. However, it formats numbers the french way in native mode.
+----
 
-Without further tuning, the build machine's default locale would be used. Another locale could be specified with
-the https://quarkus.io/guides/building-native-image#quarkus-native-pkg-native-config_quarkus.native.user-language[quarkus.native.user-language] and https://quarkus.io/guides/building-native-image#quarkus-native-pkg-native-config_quarkus.native.user-country[quarkus.native.user-country] configuration properties.
+formats numbers the arabic way in JVM mode as expected. However, it formats numbers the French way in native mode.
+
+Without further tuning, the build machine's default locale would be used. Another locale can be specified with
+the `quarkus.default-locale` configuration property.
+
+For example, to make the above example work, the default locale could be set as follows.
+
+[source,properties]
+----
+quarkus.default-locale=ar-MA
+----
