Add Smooks JVM only extension

--- a/docs/modules/ROOT/nav.adoc
+++ b/docs/modules/ROOT/nav.adoc
@@ -281,6 +281,7 @@
 *** xref:reference/extensions/huaweicloud-smn.adoc[SimpleNotification]
 *** xref:reference/extensions/slack.adoc[Slack]
 *** xref:reference/extensions/smallrye-reactive-messaging.adoc[SmallRye Reactive Messaging]
+*** xref:reference/extensions/smooks.adoc[Smooks]
 *** xref:reference/extensions/snakeyaml.adoc[SnakeYAML]
 *** xref:reference/extensions/splunk.adoc[Splunk]
 *** xref:reference/extensions/splunk-hec.adoc[Splunk HEC]
